# jestit-base

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
apps/: apps.json
apps/examples/example/: models.py
apps/examples/example/migrations/: 0001_initial.py  0003_note_metadata_alter_note_password.py  0004_todo_note.py
apps/jestit/authit/middleware/: jwt.py
apps/jestit/authit/models/: group.py  member.py  user.py
apps/jestit/authit/rest/: group.py  user.py
apps/jestit/example/: models.py  rest.py
apps/jestit/example/migrations/: 0002_note.py
apps/jestit/jestit/decorators/: http.py
apps/jestit/jestit/helpers/: crypto.py  logit.py  modules.py  paths.py  request.py
apps/jestit/jestit/models/: __init__.py  base.py
apps/jestit/jestit/serializers/: models.py
apps/jestit/testit/: client.py  helpers.py  runner.py
apps/tests/: test_example.py
apps/tests/authit_tests/: basic.py
apps/tests/examples/: basics.py  notes.py
config/: dev_server.conf
config/project/: __init__.py  urls.py
config/project/defaults/: __init__.py
docs/: jestitbase_rest_api.md
